--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -691,7 +691,7 @@
 	      <child>
 		<widget class="GtkButton" id="button1">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Reload the latest information about updates</property>
+		  <property name="tooltip" translatable="yes">Check for new updates</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -699,7 +699,7 @@
 		  <signal name="clicked" handler="on_button_reload_clicked" last_modification_time="Mon, 16 Jan 2006 20:40:51 GMT"/>
 
 		  <child>
-		    <widget class="GtkAlignment" id="alignment6">
+		    <widget class="GtkAlignment" id="alignment8">
 		      <property name="visible">True</property>
 		      <property name="xalign">0.5</property>
 		      <property name="yalign">0.5</property>
@@ -711,13 +711,13 @@
 		      <property name="right_padding">0</property>
 
 		      <child>
-			<widget class="GtkHBox" id="hbox14">
+			<widget class="GtkHBox" id="hbox18">
 			  <property name="visible">True</property>
 			  <property name="homogeneous">False</property>
 			  <property name="spacing">2</property>
 
 			  <child>
-			    <widget class="GtkImage" id="image10">
+			    <widget class="GtkImage" id="image14">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-refresh</property>
 			      <property name="icon_size">4</property>
@@ -734,9 +734,9 @@
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label24">
+			    <widget class="GtkLabel" id="label29">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">_Reload</property>
+			      <property name="label" translatable="yes">_Check</property>
 			      <property name="use_underline">True</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1176,7 +1176,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label28">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">_Reload</property>
+			  <property name="label" translatable="yes">_Check</property>
 			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1259,7 +1259,7 @@
 		<widget class="GtkLabel" id="label27">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;You need to manually reload the latest information about updates&lt;/big&gt;&lt;/b&gt;
+		  <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;You must check for updates manually&lt;/big&gt;&lt;/b&gt;
 
 Your system does not check for updates automatically. You can configure this behavior in &quot;System&quot; -&gt; &quot;Administration&quot; -&gt; &quot;Software Properties&quot;.</property>
 		  <property name="use_underline">False</property>
