--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -283,7 +283,7 @@
 		      <child>
 			<widget class="GtkButton" id="button1">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Check for available updates</property>
+			  <property name="tooltip" translatable="yes">Check the software channels for new updates</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -467,7 +467,7 @@
 	    <widget class="GtkExpander" id="expander_details">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="expanded">False</property>
+	      <property name="expanded">True</property>
 	      <property name="spacing">6</property>
 	      <signal name="activate" handler="on_expander_details_activate" last_modification_time="Mon, 31 Jan 2005 17:55:19 GMT"/>
 
@@ -512,7 +512,7 @@
 				  <property name="overwrite">False</property>
 				  <property name="accepts_tab">True</property>
 				  <property name="justification">GTK_JUSTIFY_LEFT</property>
-				  <property name="wrap_mode">GTK_WRAP_WORD</property>
+				  <property name="wrap_mode">GTK_WRAP_NONE</property>
 				  <property name="cursor_visible">False</property>
 				  <property name="pixels_above_lines">6</property>
 				  <property name="pixels_below_lines">0</property>
