--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -27,7 +27,7 @@
       <property name="spacing">6</property>
 
       <child>
-	<widget class="GtkVBox" id="vbox10">
+	<widget class="GtkVBox" id="vbox_updates">
 	  <property name="border_width">6</property>
 	  <property name="visible">True</property>
 	  <property name="homogeneous">False</property>
@@ -464,7 +464,7 @@
 	    <widget class="GtkExpander" id="expander_details">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="expanded">False</property>
+	      <property name="expanded">True</property>
 	      <property name="spacing">6</property>
 	      <signal name="activate" handler="on_expander_details_activate" last_modification_time="Mon, 31 Jan 2005 17:55:19 GMT"/>
 
@@ -476,7 +476,6 @@
 
 		  <child>
 		    <widget class="GtkNotebook" id="notebook_details">
-		      <property name="height_request">200</property>
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="show_tabs">True</property>
@@ -714,7 +713,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label12">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Show details</property>
+		  <property name="label" translatable="yes">Changes and description of the update</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
