--- a/data/SoftwareProperties.glade
+++ b/data/SoftwareProperties.glade
@@ -1052,7 +1052,7 @@
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
-	      <property name="spacing">6</property>
+	      <property name="spacing">12</property>
 
 	      <child>
 		<widget class="GtkLabel" id="label20">
@@ -1085,13 +1085,14 @@ The results are used to improve the support for popular applications and to rank
 		<widget class="GtkCheckButton" id="checkbutton_popcon">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Submit statistical information to Ubuntu</property>
+		  <property name="label" translatable="yes">Submit statistical information</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
 		  <property name="draw_indicator">True</property>
+		  <signal name="toggled" handler="on_checkbutton_popcon_toggled" last_modification_time="Fri, 21 Jul 2006 17:13:17 GMT"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
